** The F-distribution gsl_ran_fdist_pdf now avoids unnecessary
   underflow and overflow and handles cases where n > 248. [bug
   #28500]

** The SVD routines now use a scaled version of the implicit QR method
   and compute the shift more reliably for values at the limit of
   double precision, avoiding potential NaNs. [bug #28767]

** A compile time error is emitted if the configuration stage prevents
   the functions gsl_isnan and gsl_finite from being defined.

** Added missing dereference in GSL_VECTOR_COMPLEX when not using
   GSL_RANGE_CHECK [bug #28017]

** Improved the range of gsl_sf_hyperg1F1(a,b,x) when a<0,b>0. [bug
   #28718]

** Added macros GSL_MAJOR_VERSION and GSL_MINOR_VERSION in
   <gsl/gsl_version.h>

** Improved gsl_eigen_symmv and gsl_eigen_symm to avoid a potential
   infinite loop when the tridiagonalised matrix contains very small
   values. [bug #28096]

** Added functions gsl_multifit_linear_usvd and
   gsl_multifit_wlinear_usvd for multilinear fitting without
   column-scaling of the fit matrix.

* What was new in gsl-1.13:

** Upgraded to latest autoconf and automake (autoconf-2.64,
   automake-1.11)

** Fixed the rk4 and bspline allocators to avoid invalid free()
   calls under out of memory conditions. [bug #27194, #27236]

** Fixed a bug in gsl_multimin_fminimizer_nmsimplex2 where the center
   and size of the simplex were not updated on contract-by-best steps,
   causing failures in convergence. [bug #27180]

** Added new functions to set MISER and VEGAS Monte Carlo integration
   parameters, and to examine VEGAS chi-squared value and intermediate
   results.

** Added the function gsl_bspline_greville_abscissa to compute
   Greville abscissae for B-splines.

** The cumulative distribution functions gsl_cdf_gumbel1_{P,Q} should
   now handle a larger range of parameters without underflow and
   overflow.

** The header file gsl_const_cgs.h no longer defines values for